--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,6 @@
 <div class="ce-header__title">
     Конвертер валют
 </div>
+<div class="ce-header__pairs">
+    <ce-exchange-rate *ngFor="let pair of exchangeRatePair" [currencyPair]="pair"></ce-exchange-rate>
+</div>
