--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,12 +1,22 @@
 .ce-header {
-    height: 80px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    background: darkolivegreen;
+    background: linear-gradient(to right, #3498db, #2ecc71);
+    height: 150px;
+    color: #ffffff;
+    padding: 0 10%;
 
     &__title {
-        color: white;
+        font-size: 1.5em;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin: 0;
     }
 
-
+    &__pairs {
+        display: flex;
+        gap: 10px;
+    }
 }
