--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @import './app/components/header/header.component.scss';
 @import './app/components/exchange-rate/exchange-rate.component.scss';
+@import './app/components/currency-converter/currency-converter.component.scss';
 
