--- a/src/app/components/currency-converter/currency-converter.component.scss
+++ b/src/app/components/currency-converter/currency-converter.component.scss
@@ -1,24 +1,24 @@
 .ce-currency-converter {
-    background: linear-gradient(to right, #ecf0f1, #bdc3c7);
-    min-height: calc(100vh - 150px);
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: calc(100vh - 10%);
 
     &__converter {
-        background-color: #ffffff;
+        background-color: white;
         border: 1px solid #bdc3c7;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         padding: 20px;
-        width: 70%;
+        min-width: 600px;
     }
 
     &__wrapper {
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        margin: 10% 0;
+        margin-bottom: 30px;
+        margin-top: 50px;
     }
 
     &__pair {
