Add swap action

--- a/src/app/components/currency-converter/currency-converter.component.html
+++ b/src/app/components/currency-converter/currency-converter.component.html
@@ -15,7 +15,7 @@
             </mat-form-field>
         </div>
 
-        <mat-icon>swap_horizontal_circle</mat-icon>
+        <mat-icon (click)="swap()" class="ce-currency-converter__swap-icon">swap_horizontal_circle</mat-icon>
 
         <div class="ce-currency-converter__pair">
             <mat-form-field>
