--- a/src/app/components/currency-converter/currency-converter.component.scss
+++ b/src/app/components/currency-converter/currency-converter.component.scss
@@ -21,6 +21,12 @@
         margin-top: 50px;
     }
 
+    &__swap-icon {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
     &__pair {
         display: flex;
         align-items: center;
